--- a/mempool-lightning/docker-compose.yml
+++ b/mempool-lightning/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     init: true
     restart: on-failure
     stop_grace_period: 1m
-    command: "./wait-for mariadb:3306 --timeout=720 -- nginx -g 'daemon off;'"
+    command: "./wait-for mariadb_mainnet:3306 --timeout=720 -- nginx -g 'daemon off;'"
     environment:
       FRONTEND_HTTP_PORT: $APP_MEMPOOL_PORT
       BACKEND_MAINNET_HTTP_HOST: $APP_MEMPOOL_API_IP
@@ -28,7 +28,7 @@ services:
     init: true
     restart: on-failure
     stop_grace_period: 1m
-    command: "./wait-for-it.sh mariadb:3306 --timeout=720 --strict -- ./start.sh"
+    command: "./wait-for-it.sh mariadb_mainnet:3306 --timeout=720 --strict -- ./start.sh"
     volumes:
       - ${APP_DATA_DIR}/data:/backend/cache
     environment:
@@ -58,7 +58,7 @@ services:
     init: true
     restart: on-failure
     stop_grace_period: 1m
-    command: "./wait-for-it.sh mariadb:3306 --timeout=720 --strict -- ./start.sh"
+    command: "./wait-for-it.sh mariadb_lightning:3306 --timeout=720 --strict -- ./start.sh"
     volumes:
       - ${APP_DATA_DIR}/data-lightning:/backend/cache
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
