--- a/mempool-lightning/docker-compose.yml
+++ b/mempool-lightning/docker-compose.yml
@@ -12,14 +12,15 @@ services:
     init: true
     restart: on-failure
     stop_grace_period: 1m
-    command: "./wait-for mariadb_mainnet:3306 --timeout=720 -- nginx -g 'daemon off;'"
+    command: "./wait-for mariadb:3306 --timeout=720 -- nginx -g 'daemon off;'"
     environment:
       FRONTEND_HTTP_PORT: $APP_MEMPOOL_PORT
       BACKEND_MAINNET_HTTP_HOST: $APP_MEMPOOL_API_IP
       LIGHTNING: "true"
       NGINX_PORT: $APP_MEMPOOL_PORT
       NGINX_HOSTNAME: $APP_MEMPOOL_API_IP
-      APP_MEMPOOL_LIGHTNING_API_IP: $APP_MEMPOOL_LIGHTNING_API_IP
+      BACKEND_MAINNET_LIGHTNING_HOST: $APP_MEMPOOL_LIGHTNING_API_IP
+      BACKEND_MAINNET_LIGHTNING_PORT: "8993"
     networks:
       default:
         ipv4_address: $APP_MEMPOOL_IP
@@ -29,7 +30,7 @@ services:
     init: true
     restart: on-failure
     stop_grace_period: 1m
-    command: "./wait-for-it.sh mariadb_mainnet:3306 --timeout=720 --strict -- ./start.sh"
+    command: "./wait-for-it.sh mariadb:3306 --timeout=720 --strict -- ./start.sh"
     volumes:
       - ${APP_DATA_DIR}/data:/backend/cache
     environment:
@@ -53,7 +54,7 @@ services:
     networks:
        default:
          ipv4_address: $APP_MEMPOOL_API_IP
-  lightning:
+  api_lightning:
     image: knorrium/backend:latest
     user: "1000:1000"
     init: true
@@ -90,7 +91,7 @@ services:
     networks:
        default:
          ipv4_address: $APP_MEMPOOL_LIGHTNING_API_IP
-  mariadb_mainnet:
+  mariadb:
     image: mariadb:10.5.12@sha256:dfcba5641bdbfd7cbf5b07eeed707e6a3672f46823695a0d3aba2e49bbd9b1dd
     user: "1000:1000"
     restart: on-failure
