--- a/mempool-lightning/docker-compose.yml
+++ b/mempool-lightning/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       DATABASE_DATABASE: "mempool"
       DATABASE_USERNAME: "mempool"
       DATABASE_PASSWORD: "mempool"
-      MEMPOOL_HTTP_PORT: "8999"
+      BACKEND_HTTP_PORT: "8999"
       MEMPOOL_CACHE_DIR: "/backend/cache"
       MEMPOOL_CLEAR_PROTECTION_MINUTES: "20"
       MEMPOOL_INDEXING_BLOCKS_AMOUNT: "52560"
@@ -78,7 +78,7 @@ services:
       DATABASE_USERNAME: "mempool_lightning"
       DATABASE_PASSWORD: "mempool_lightning"
       MEMPOOL_ENABLED: "false"
-      MEMPOOL_HTTP_PORT: "8993"
+      BACKEND_HTTP_PORT: "8993"
       MEMPOOL_CACHE_DIR: "/backend/cache"
       MEMPOOL_CLEAR_PROTECTION_MINUTES: "20"
       MEMPOOL_INDEXING_BLOCKS_AMOUNT: "52560"
