--- a/mempool-lightning/docker-compose.yml
+++ b/mempool-lightning/docker-compose.yml
@@ -64,6 +64,7 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data-lightning:/backend/cache
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
+      - ${APP_DATA_DIR}/maxmind:/maxmind
     environment:
       CORE_RPC_HOST: $APP_BITCOIN_NODE_IP
       CORE_RPC_PORT: $APP_BITCOIN_RPC_PORT
@@ -88,6 +89,8 @@ services:
       LND_TLS_CERT_PATH: "/lnd/tls.cert"
       LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/readonly.macaroon"
       LND_REST_API_URL: "https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT"
+      MAXMIND_ENABLED: "true"
+      MAXMIND_GEOLITE2_CITY: "/maxmind/dbip-city-lite-2023-01.mmdb"
     networks:
        default:
          ipv4_address: $APP_MEMPOOL_LIGHTNING_API_IP
