--- a/mempool-lightning/docker-compose.yml
+++ b/mempool-lightning/docker-compose.yml
@@ -91,6 +91,7 @@ services:
       LND_REST_API_URL: "https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT"
       MAXMIND_ENABLED: "true"
       MAXMIND_GEOLITE2_CITY: "/maxmind/dbip-city-lite-2023-01.mmdb"
+      MAXMIND_GEOLITE2_ASN: "/maxmind/dbip-asn-lite-2023-01.mmdb"
     networks:
        default:
          ipv4_address: $APP_MEMPOOL_LIGHTNING_API_IP
