--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_MEMPOOL_PORT
       PROXY_AUTH_ADD: "false"
   web:
-    image: mempool/frontend:v2.5.0-alpha1@sha256:beb0244b9f7662b06daf2063d8402d4e8458877cc10046d09f870508bbdd2d7c
+    image: mempool/frontend:latest
     user: "1000:1000"
     init: true
     restart: on-failure
@@ -23,7 +23,7 @@ services:
       default:
         ipv4_address: $APP_MEMPOOL_IP
   api:
-    image: mempool/backend:v2.5.0-alpha1@sha256:961c0f6fea3a9890a9459351123609f9fa3052fe07d68915b7c3fb26157407ff
+    image: mempool/backend:latest
     user: "1000:1000"
     init: true
     restart: on-failure
